# wasm-bindgen-file-reader

./: Cargo.toml  README.md
src/: lib.rs
